--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,218 @@
-.App {
+/* CSS RESET */
+
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul,
+li {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+a {
+  text-decoration: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap");
+
+:root {
+  --cor-0: #e9eadd;
+  --cor-1: #d3d5bb;
+  --cor-2: #e1e3c8;
+  --cor-3: #bbbda6;
+  --cor-4: #959684;
+  --cor-5: #56574c;
+  --cor-6: #4d4e44;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  max-width: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--cor-0);
+  font-family: "DM Sans", sans-serif;
+}
+
+.container {
+  margin-top: 6rem;
+  margin-bottom: 3rem;
+  width: 40rem;
+}
+
+button {
+  padding: 1rem 1.5rem;
+  outline: none;
+  border: none;
+  background-color: var(--cor-3);
+  border-radius: 0.5rem;
+  font-family: inherit;
+  font-size: 1.25rem;
+  box-shadow: 0px 2px 4px 0px rgba(77, 78, 68, 0.25);
+  color: var(--cor-6);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover,
+button:focus {
+  background-color: var(--cor-4);
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 2.5rem;
+  color: var(--cor-6);
+  padding: 2rem 1rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+  font-size: 1.5rem;
+  color: var(--cor-6);
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 660px) {
+  .container {
+    width: 20rem;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  button {
+    font-size: 1rem;
   }
-  to {
-    transform: rotate(360deg);
+  h1 {
+    font-size: 1.75rem;
+  }
+  h2 {
+    font-size: 1.125rem;
   }
 }
