adicionada condição para apagar valores no formulario

--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,7 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap");
@@ -148,6 +149,7 @@ input[type="number"] {
   --cor-2: #e1e3c8;
   --cor-3: #bbbda6;
   --cor-4: #959684;
+  --cor-4-5: #868776;
   --cor-5: #56574c;
   --cor-6: #4d4e44;
 }
@@ -200,6 +202,22 @@ h2 {
   font-size: 1.5rem;
   color: var(--cor-6);
   text-align: center;
+}
+
+table {
+  border-spacing: 0;
+  text-align: left;
+  color: var(--cor-6);
+  width: 100%;
+}
+
+table td,
+table th {
+  padding: 0.5rem 1rem;
+}
+
+table tbody tr:nth-child(odd) {
+  background-color: var(--cor-3);
 }
 
 @media (max-width: 660px) {
