--- a/src/Components/Treino.module.css
+++ b/src/Components/Treino.module.css
@@ -22,7 +22,7 @@
 .form label {
   display: block;
   margin-bottom: 1rem;
-  color: var(--cor-4);
+  color: var(--cor-4-5);
   text-align: center;
 }
 
